[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Ambient.gd" type="Script" id=1]
[ext_resource path="res://Sprites/grassgrounds.tres" type="TileSet" id=2]
[ext_resource path="res://Sprites/Weather Icon Set/cloudyWeather.png" type="Texture" id=3]
[ext_resource path="res://forest.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sprites/rain/rain_drops-03.png" type="Texture" id=5]
[ext_resource path="res://Sprites/rain/rain_drops-01.png" type="Texture" id=6]
[ext_resource path="res://Sprites/rain/rain_drops-04.png" type="Texture" id=7]
[ext_resource path="res://Sprites/rain/rain_drops-02.png" type="Texture" id=8]
[ext_resource path="res://rain1.ogg" type="AudioStream" id=9]
[ext_resource path="res://rain2.ogg" type="AudioStream" id=10]
[ext_resource path="res://dogicapixel.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="Ambient" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Node2D" parent="."]
z_index = -2

[node name="bgtext" type="TextureRect" parent="bg"]
margin_top = -96.1085
margin_right = 637.0
margin_bottom = 360.892
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeatherRequest" type="HTTPRequest" parent="."]

[node name="WeatherIcon" type="Sprite" parent="."]
position = Vector2( 180.395, 46.3791 )
texture = ExtResource( 3 )

[node name="RainWeak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.146

[node name="RainStrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -13.127

[node name="CityLabel" type="Label" parent="."]
margin_left = 260.3
margin_top = 22.6202
margin_right = 340.3
margin_bottom = 41.6202
custom_fonts/font = SubResource( 2 )
text = "Cidade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempLabel" type="Label" parent="."]
margin_left = 420.481
margin_top = 22.6202
margin_right = 478.481
margin_bottom = 41.6202
custom_fonts/font = SubResource( 3 )
text = "0Â° C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rain" type="Node2D" parent="."]
visible = false
position = Vector2( 126.758, 164.527 )

[node name="Rain1" type="AnimatedSprite" parent="Rain"]
modulate = Color( 0.54902, 0.54902, 0.54902, 0.756863 )
z_index = -1
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Rain2" type="AnimatedSprite" parent="Rain"]
modulate = Color( 0.54902, 0.54902, 0.54902, 0.756863 )
position = Vector2( 252.285, 1.33484 )
z_index = -1
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Rain3" type="AnimatedSprite" parent="Rain"]
modulate = Color( 0.54902, 0.54902, 0.54902, 0.756863 )
position = Vector2( 750.876, -129.581 )
z_index = -1
frames = SubResource( 1 )
playing = true
offset = Vector2( -246.306, 129.581 )

[node name="Rain4" type="AnimatedSprite" parent="Rain"]
modulate = Color( 0.54902, 0.54902, 0.54902, 0.756863 )
position = Vector2( 247.641, -363.178 )
z_index = -1
frames = SubResource( 1 )
playing = true
offset = Vector2( -246.306, 129.581 )

[node name="Rain5" type="AnimatedSprite" parent="Rain"]
modulate = Color( 0.54902, 0.54902, 0.54902, 0.756863 )
position = Vector2( 497.256, -365.848 )
z_index = -1
frames = SubResource( 1 )
frame = 3
playing = true
offset = Vector2( -246.306, 129.581 )

[node name="Rain6" type="AnimatedSprite" parent="Rain"]
modulate = Color( 0.54902, 0.54902, 0.54902, 0.756863 )
position = Vector2( 753.546, -367.183 )
z_index = -1
frames = SubResource( 1 )
frame = 3
playing = true
offset = Vector2( -246.306, 129.581 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 29.7302 )
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
